--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
    margin: 0; padding: 0;}
 body {
     font-family: 'Source Code Pro', monospace;
-    background-image: url('/img/about-me.jpg')
+    background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
 
 
 
@@ -68,15 +70,16 @@ ul li { list-style: none;display: inline;}
 
 .home {
     background-color: #8EC5FC;
+    background-image: url('/img/banner.jpg');
+    background-color: #8EC5FC;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-
+    background-position: top;
     max-width: 100%;
     width: 100%;
     margin: 0 auto;
     padding: 0;
     background-repeat: no-repeat;
-    
-}
+    }
 .scroll--banner{
     padding: 20px;
     text-align: center;
@@ -93,14 +96,15 @@ ul li { list-style: none;display: inline;}
     padding-bottom: 10px;
     font-family: 'Caveat', cursive;
     white-space: nowrap;
+    opacity: 1;
 }
 .section__subtitle {
     text-align: center;
     font-size: 50px;
     font-weight: bolder;
     padding: 50px;
-    padding-bottom: 1rem;
     font-family: 'Caveat', cursive;
+    opacity: 1;
 }
 .section__subtitle--scroll{
     text-align: center;
@@ -109,10 +113,11 @@ ul li { list-style: none;display: inline;}
     padding: 30px;
     padding-bottom: 0.5rem;
     font-family: 'Montserrat', sans-serif;
+    opacity: 1;
 }
 
 .hr-banner {
-    border: 2px solid #9599E2;
+    border: 1px solid #457EAC;
     border-radius: 5px;
     width: 50%;
     margin: 0 auto;
