--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,9 @@ ul li { list-style: none;display: inline;}
     margin: 0 auto;
 }
 .whoiam{
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+    background-color: #FFDEE9;
+    background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+
     margin: 15px;
     padding: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -139,10 +140,10 @@ ul li { list-style: none;display: inline;}
     font-weight: bold;
     column-count: auto;
     width: 100%;
-  column-gap: 40px;
-  column-rule: 1px solid #011627;
-  text-align: justify;
-  padding: 20px;
+    column-gap: 40px;
+    column-rule: 1px solid #011627;
+    text-align: justify;
+    padding: 20px;
 
 }
 
