--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 * {box-sizing:border-box;
    margin: 0; padding: 0;}
-
+ 
 body {
     font-family: 'Source Code Pro', monospace;
     background-color: #8EC5FC;
@@ -47,7 +47,8 @@ body::-webkit-scrollbar-thumb {background-color:#A0A5A6;border-radius:16px;borde
     padding: 10px;
 }
 .navigation__items {
-    font-size: medium;
+    padding: 10px;
+    font-size: large;
     bottom: 3em;
     font-weight: bold;
 }
