add read-more for smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ body {
     background-color: white;
     border-radius: 10px;
 }
+.read-more-button {
+    display: none;
+}
 
 @media (max-width: 600px) {
     .hamburger-menu{
@@ -91,7 +94,24 @@ body {
     .navbar-elements.active{
         display: flex;
     }
-}
+    .read-more-button {
+        display: block;
+    }
+    .whoiam a {
+        text-decoration: none;
+        text-align: center;
+        color: #011627;
+    }
+    .whoiam a:hover {
+        font-size: 2rem;
+    }
+    .read-more {
+        display: none;
+    }
+    .read-more:target {
+        display: block;
+    }
+}    
 section div  {
     padding:1px;
 }
