--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
    margin: 0; padding: 0;}
 
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Source Code Pro', monospace;
     background: #42275a; /* fallback for old browsers */
