--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,9 @@ ul li { list-style: none;display: inline;}
     font-weight: bold;
     position: relative;
     padding: 0px;
+    padding-top: 10px;
     padding-bottom: 10px;
-    font-family: 'Caveat', cursive;
+    font-family: 'Josefin Sans', sans-serif;
     white-space: nowrap;
     opacity: 1;
 }
