--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,18 @@ body {
     display: none;
     width: 100%;
   }
+  .banner h1 {
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    position: relative;
+    padding: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-family: "Josefin Sans", sans-serif;
+    white-space: nowrap;
+    opacity: 1;
+  }
   .navbar {
     flex-direction: column;
     align-items: flex-start;
@@ -378,7 +390,7 @@ footer {
 }
 
 .home--gallery img {
-  padding: 3px;
+  padding: 5px;
   float: left;
   width: 50%;
 }
