--- a/contacts.css
+++ b/contacts.css
@@ -63,3 +63,46 @@ body {
 .social__list--item:hover > .hover__element{
     display: block  ;
 }
+
+@media (max-width: 600px) {
+    .bodyelements {
+	width: 350px;
+	height: 0px;
+    text-align: center;	
+    position: absolute;
+	top:0;
+	bottom: 0;
+	left: 50px;
+	right: 0;
+  	color: white;
+	margin: auto;
+}
+.bodyh_one {
+	width: 300px;
+	height: 200px;
+    text-align: center;	
+    position: absolute;
+	top:0;
+	bottom: 0;
+	left: 10px;
+	right: 0;
+  	color: white;
+    margin: auto;
+    font-family: 'Rubik', sans-serif;
+    font-size: small;
+}
+.social li{
+    display: inline;
+    float: left;
+    margin: 10px;
+}
+.hover__element {
+    color: whitesmoke;
+    display: none;
+    padding: 1vh;
+    background-color:#282F44 /*#546A7B*/;
+    margin-top:10px;
+    border-radius: 25px;
+    font-family: "Rubik", sans-serif;
+}
+}
