--- a/css/about.css
+++ b/css/about.css
@@ -113,9 +113,7 @@ body {
   width: 100%;
   max-width: 200px;
   margin-top: -10vh;
- .body__about{
-   fl
- }omargin-left: auto;
+  margin-left: auto;
   height: auto;
   border: none;
 }
@@ -134,7 +132,7 @@ body {
   padding: 10px;
 }
 .icons a {
-  padding-left: 10px;
+  padding: 10px;
   font-size: medium;
   color: black;
 }
